--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <title>home page</title>
 </head>
 <body>
-    <h1 id="welcome"> </h1>
+    <h1 id="welcome"> welcom ... </h1>
     <script  src="main.js"></script>
 </body>
 </html>
